--- a/src/KeePassWin/Controls/MasterDetailsView.xaml
+++ b/src/KeePassWin/Controls/MasterDetailsView.xaml
@@ -7,6 +7,7 @@
         <Setter Property="Background" Value="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
         <Setter Property="BorderBrush" Value="{ThemeResource ApplicationForegroundThemeBrush}" />
         <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="IsTabStop" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:MasterDetailsView">
@@ -56,20 +57,109 @@
                                                   ContentTemplate="{TemplateBinding NoSelectionContentTemplate}" />
                                 <ContentPresenter x:Name="DetailsPresenter"
                                                   Background="{TemplateBinding Background}"
-                                                  ContentTemplate="{TemplateBinding DetailsTemplate}" />
+                                                  ContentTemplate="{TemplateBinding DetailsTemplate}" >
+                                    <ContentPresenter.RenderTransform>
+                                        <TranslateTransform x:Name="DetailsPresenterTransform"/>
+                                    </ContentPresenter.RenderTransform>
+                                </ContentPresenter>
                             </Grid>
                         </Grid>
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="SelectionStates">
-                                <VisualState x:Name="NoSelectionWide" />
-                                <VisualState x:Name="HasSelection">
+                                <VisualStateGroup.Transitions>
+                                    <VisualTransition From="NoSelectionWide" To="HasSelectionWide">
+                                        <Storyboard>
+                                            <DrillInThemeAnimation EntranceTargetName="DetailsPresenter"
+                                                                   ExitTargetName="NoSelectionPresenter"/>
+                                        </Storyboard>
+                                    </VisualTransition>
+                                    <VisualTransition From="NoSelectionNarrow" To="HasSelectionWide">
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetName="DetailsPresenterTransform"
+                                                             Storyboard.TargetProperty="X"
+                                                             BeginTime="0:0:0" Duration="0:0:0.25"
+                                                             From="200" To="0">
+                                                <DoubleAnimation.EasingFunction>
+                                                    <QuarticEase EasingMode="EaseOut"/>
+                                                </DoubleAnimation.EasingFunction>
+                                            </DoubleAnimation>
+                                            <DoubleAnimation Storyboard.TargetName="DetailsPresenter"
+                                                             Storyboard.TargetProperty="Opacity"
+                                                             BeginTime="0:0:0" Duration="0:0:0.25"
+                                                             From="0" To="1">
+                                                <DoubleAnimation.EasingFunction>
+                                                    <QuarticEase EasingMode="EaseOut"/>
+                                                </DoubleAnimation.EasingFunction>
+                                            </DoubleAnimation>
+                                        </Storyboard>
+                                    </VisualTransition>
+                                    <VisualTransition From="NoSelectionNarrow" To="HasSelectionNarrow">
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetName="DetailsPresenterTransform"
+                                                             Storyboard.TargetProperty="X"
+                                                             BeginTime="0:0:0" Duration="0:0:0.25"
+                                                             From="200" To="0">
+                                                <DoubleAnimation.EasingFunction>
+                                                    <QuarticEase EasingMode="EaseOut"/>
+                                                </DoubleAnimation.EasingFunction>
+                                            </DoubleAnimation>
+                                            <DoubleAnimation Storyboard.TargetName="DetailsPresenter"
+                                                             Storyboard.TargetProperty="Opacity"
+                                                             BeginTime="0:0:0" Duration="0:0:0.25"
+                                                             From="0" To="1">
+                                                <DoubleAnimation.EasingFunction>
+                                                    <QuarticEase EasingMode="EaseOut"/>
+                                                </DoubleAnimation.EasingFunction>
+                                            </DoubleAnimation>
+                                        </Storyboard>
+                                    </VisualTransition>
+                                    <VisualTransition From="HasSelectionWide" To="NoSelectionWide">
+                                        <Storyboard>
+                                            <DrillOutThemeAnimation ExitTargetName="DetailsPresenter"
+                                                                    EntranceTargetName="NoSelectionPresenter"/>
+                                        </Storyboard>
+                                    </VisualTransition>
+                                    <VisualTransition From="HasSelectionNarrow" To="NoSelectionNarrow">
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetName="DetailsPresenterTransform"
+                                                             Storyboard.TargetProperty="X"
+                                                             BeginTime="0:0:0" Duration="0:0:0.25"
+                                                             From="0" To="200">
+                                            </DoubleAnimation>
+                                            <DoubleAnimation Storyboard.TargetName="DetailsPresenter"
+                                                             Storyboard.TargetProperty="Opacity"
+                                                             BeginTime="0:0:0.08" Duration="0:0:0.17"
+                                                             From="1" To="0">
+                                                <DoubleAnimation.EasingFunction>
+                                                    <QuarticEase EasingMode="EaseOut"/>
+                                                </DoubleAnimation.EasingFunction>
+                                            </DoubleAnimation>
+                                        </Storyboard>
+                                    </VisualTransition>
+                                </VisualStateGroup.Transitions>
+                                <VisualState x:Name="NoSelectionWide">
+                                    <VisualState.Setters>
+                                        <Setter Target="DetailsPresenter.Visibility" Value="Collapsed" />
+                                        <Setter Target="MasterPanel.Visibility" Value="Visible" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="HasSelectionWide">
                                     <VisualState.Setters>
                                         <Setter Target="NoSelectionPresenter.Visibility" Value="Collapsed" />
+                                        <Setter Target="MasterPanel.Visibility" Value="Visible" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="HasSelectionNarrow">
+                                    <VisualState.Setters>
+                                        <Setter Target="NoSelectionPresenter.Visibility" Value="Collapsed" />
+                                        <Setter Target="MasterPanel.Visibility" Value="Collapsed" />
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="NoSelectionNarrow">
                                     <VisualState.Setters>
                                         <Setter Target="NoSelectionPresenter.Visibility" Value="Collapsed" />
+                                        <Setter Target="DetailsPresenter.Visibility" Value="Collapsed" />
+                                        <Setter Target="MasterPanel.Visibility" Value="Visible" />
                                     </VisualState.Setters>
                                 </VisualState>
                             </VisualStateGroup>
@@ -99,5 +189,4 @@
             </Setter.Value>
         </Setter>
     </Style>
-
-</ResourceDictionary>
+</ResourceDictionary>    
