Add custom search box
Fixes #49

--- a/src/KeePassWin/Views/DatabasePage.xaml
+++ b/src/KeePassWin/Views/DatabasePage.xaml
@@ -223,7 +223,7 @@
                                     </DataTemplate>
                                 </controls:BreadCrumbView.ItemTemplate>
                             </controls:BreadCrumbView>
-                            <AutoSuggestBox mvvm:Keyboard.Focus="Search" QueryIcon="Find" TextChanged="SearchTextChanged" />
+                            <controls:SearchBox mvvm:Keyboard.Focus="Search" Filter="{x:Bind FilterCommand}" />
                         </StackPanel>
                     </DataTemplate>
                 </controls:MasterDetailsView.MasterHeaderTemplate>
