--- a/src/KeePassWin/Views/DatabasePage.xaml
+++ b/src/KeePassWin/Views/DatabasePage.xaml
@@ -1,4 +1,4 @@
-﻿<prismMvvm:SessionStateAwarePage x:Class="KeePass.Win.Views.DatabasePage"
+﻿<Page x:Class="KeePass.Win.Views.DatabasePage"
                                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,7 +12,7 @@
                                  prismMvvm:ViewModelLocator.AutoWireViewModel="True"
                                  mc:Ignorable="d">
 
-    <prismMvvm:SessionStateAwarePage.Resources>
+    <Page.Resources>
         <converters:UriVisibilityConverter x:Key="UriVisibilityConverter"/>
 
         <DataTemplate x:Name="KeePassEntryDetailsTemplate" x:DataType="keepass:IKeePassEntry">
@@ -166,7 +166,7 @@
                 </Grid>
             </UserControl>
         </DataTemplate>
-    </prismMvvm:SessionStateAwarePage.Resources>
+    </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" x:Name="Root">
         <Grid.RowDefinitions>
@@ -250,4 +250,4 @@
             </controls:MasterDetailsView>
         </Grid>
     </Grid>
-</prismMvvm:SessionStateAwarePage>
+</Page>
