--- a/src/KeePassWin/Views/SettingsPage.xaml
+++ b/src/KeePassWin/Views/SettingsPage.xaml
@@ -1,4 +1,4 @@
-﻿<prismMvvm:SessionStateAwarePage
+﻿<Page
     x:Class="KeePass.Win.Views.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -109,4 +109,4 @@
             </PivotItem>
         </Pivot>
     </Grid>
-</prismMvvm:SessionStateAwarePage>
+</Page>
