--- a/src/KeePassWin/Views/SettingsPage.xaml
+++ b/src/KeePassWin/Views/SettingsPage.xaml
@@ -7,8 +7,7 @@
     xmlns:controls="using:KeePass.Win.Controls"
     xmlns:mvvm="using:KeePass.Win.Mvvm"
     xmlns:vm="using:KeePass.Win.ViewModels"
-    xmlns:prismMvvm="using:Prism.Windows.Mvvm"
-    prismMvvm:ViewModelLocator.AutoWireViewModel="True"
+    mvvm:Autofac.Autowire="True"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
