Switch password to use Consolas instead of Segoe.
Fixes #50

--- a/src/KeePassWin/Controls/EntryViewControl.xaml
+++ b/src/KeePassWin/Controls/EntryViewControl.xaml
@@ -25,6 +25,7 @@
                 Header="Username" Text="{x:Bind Path=Entry.UserName, Mode=TwoWay}" />
 
             <PasswordBox
+                FontFamily="Consolas"
                 x:Name="passwordBox"
                 PasswordRevealMode="Hidden" 
                 Header="Password" Password="{x:Bind Path=Entry.Password, Mode=TwoWay}" />
