--- a/src/KeePassWin/App.xaml
+++ b/src/KeePassWin/App.xaml
@@ -11,6 +11,7 @@
                 <ResourceDictionary Source="Resources/KeePassItems.xaml" />
                 <ResourceDictionary Source="Controls/MasterDetailsView.xaml" />
                 <ResourceDictionary Source="Controls/BreadCrumbView.xaml" />
+                <ResourceDictionary Source="Controls/HamburgerMenu.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </prism:PrismAutofacApplication.Resources>
