Create new bitmap image for images
Fixes #56

--- a/src/KeePassWin/Controls/ByteImage.xaml
+++ b/src/KeePassWin/Controls/ByteImage.xaml
@@ -2,7 +2,6 @@
     x:Class="KeePass.Win.Controls.ByteImage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KeePass.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -10,10 +9,6 @@
     d:DesignWidth="400">
 
     <Grid>
-        <Image>
-            <Image.Source>
-                <BitmapImage x:Name="BitmapImageSource" />
-            </Image.Source>
-        </Image>
+        <Image x:Name="imageControl" />
     </Grid>
 </UserControl>
